[package]
name = "libfmod_ext"
version = "0.1.0"
edition = "2021"
authors = ["Speak2Erase <lily@nowaffles.com>"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.6.4", features = ["rb-sys"] }
rb-sys = "0.9.97"
fmod-oxide = { version = "2.2.0", git = "https://github.com/Speak2Erase/fmod-oxide" }
paste = "1.0.15"
once_cell = "1.19.0"
