[package]
name = "libfmod_ext"
version = "0.1.0"
edition = "2021"
authors = ["Speak2Erase <lily@nowaffles.com>"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.7.0", features = [
  "rb-sys",
], git = "https://github.com/matsadler/magnus" }
rb-sys = { version = "0.9.97", features = ["ruby-macros"] }
fmod-oxide = { version = "2.2.0", git = "https://github.com/Speak2Erase/fmod-oxide", default-features = false }
paste = "1.0.15"
once_cell = "1.19.0"
bitflags = "2.5.0"
oneshot = "0.1.7"
